<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <Button
        android:id="@+id/buttonQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/b_set_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuantity" />

    <Button
        android:id="@+id/buttonPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/b_set_price"
        app:layout_constraintEnd_toEndOf="@+id/buttonQuantity"
        app:layout_constraintStart_toStartOf="@+id/buttonQuantity"
        app:layout_constraintTop_toBottomOf="@+id/textViewPr" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/buttonQuantity"
        app:layout_constraintStart_toEndOf="@+id/buttonQuantity"
        app:layout_constraintTop_toTopOf="@+id/buttonQuantity" />

    <EditText
        android:id="@+id/editTextPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tprice"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPr"
        app:layout_constraintEnd_toEndOf="@+id/editTextQuantity"
        app:layout_constraintStart_toStartOf="@+id/editTextQuantity"
        app:layout_constraintTop_toTopOf="@+id/buttonPr" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/buttonQuantity"
        app:layout_constraintStart_toStartOf="@+id/buttonQuantity"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem" />

    <TextView
        android:id="@+id/textViewPr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuantity"
        app:layout_constraintStart_toStartOf="@+id/textViewQuantity"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuantity" />

    <TextView
        android:id="@+id/textViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>